--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
+/* fonts */
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;700&display=swap");
+
 :root {
-  background-color: hsl(257, 40%, 49%);
+  --background-color: hsl(257, 40%, 49%);
 }
+
 * {
   padding: 0;
   box-sizing: border-box;
@@ -8,7 +12,158 @@
 
 body {
   background-image: url("./images/bg-desktop.svg");
-  background-color: var(background-color);
-  height: 100vh;
+  background-repeat: no-repeat;
+  background-color: var(--background-color);
   --webkit-font-smoothing: antialiased;
+  font-family: "Open Sans", sans-serif;
+  height: 100vh;
+}
+
+.container {
+  display: flex;
+  width: 100%;
+  margin: 50px 60px;
+}
+.logo img {
+  width: 220px;
+}
+
+.showcase img {
+  margin-top: 50px;
+  width: 700px;
+}
+
+/* right grid */
+
+.container-2 {
+  color: #ffffff;
+  width: 526px;
+  height: 500px;
+  margin-top: 200px;
+  margin-left: 100px;
+  position: relative;
+}
+
+.copy h1 {
+  width: 438px;
+  font-family: "Poppins";
+  font-weight: 700;
+  transform: translateX(-15%);
+  animation: comein 1s ease forwards;
+}
+
+@keyframes comein {
+  to {
+    transform: translateX(0);
+  }
+}
+
+.copy p {
+  width: 512px;
+}
+
+/* button */
+button {
+  height: 45px;
+  background-color: #ffffff;
+  border-radius: 50px;
+  padding: 10px 60px;
+  border-color: #ffffff;
+  font-family: "Open Sans", sans-serif;
+  box-shadow: 5px 5px 10px hsla(257, 7%, 19%, 0.5);
+  color: var(--background-color);
+  cursor: pointer;
+  border: none;
+  outline: none;
+  transition: all 0.4s ease-in;
+}
+
+button:hover {
+  background-color: rgb(181, 123, 192);
+  color: #ffffff;
+  transition: all 0.4s ease;
+}
+
+/* social media icons */
+.icons {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  cursor: pointer;
+}
+
+.icons i {
+  margin-left: 10px;
+  font-size: 2em;
+}
+
+/* footer */
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+.attribution a {
+  color: hsl(228, 100%, 99%);
+  text-decoration: none;
+}
+
+/* media queries */
+
+@media screen and (max-width: 375px) {
+  body {
+    margin: 0px;
+    background-image: url(./images/bg-mobile.svg);
+    background-size: cover;
+  }
+  .container {
+    width: 675px;
+    display: flex;
+    flex-direction: column;
+  }
+  .logo img {
+    margin-top: 50px;
+  }
+  .container-1 {
+    width: 100%;
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+  .showcase img {
+    margin-top: 100px;
+    width: 550px;
+  }
+  .container-2 {
+    margin-top: 100px;
+    margin-left: 40px;
+    margin-right: 40px;
+    position: relative;
+    text-align: center;
+  }
+
+  .copy h1 {
+    margin-left: 20px;
+    margin-right: 20px;
+    font-weight: 700;
+  }
+  .copy p {
+    font-weight: 400;
+    font-size: 25px;
+    letter-spacing: 1px;
+  }
+
+  button {
+    width: 70%;
+    height: 70px;
+    font-size: 25px;
+  }
+  .icons {
+    position: absolute;
+    left: 0;
+    font-size: 25px;
+  }
+  .attribution {
+    width: 100%;
+    margin: 0 60px;
+  }
 }
