--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
 body {
   background-image: url("./images/bg-desktop.svg");
   background-color: var(--background-color);
-  background-size: contain;
+  background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
   --webkit-font-smoothing: antialiased;
